<resources>
    <string name="app_name">Tamagotchi_Andr</string>
    <string name="item_default_name">Device Name</string>
    <string name="item_default_price">00, 00€</string>
    <string name="item_default_saturation">+0 food</string>
    <string name="item_default_happiness">Happiness : 100%</string>
    <string name="item_default_hungry">Hungry : 20</string>
    <string name="item_default_money">Money : 10€</string>
    <string name="item_default_state_inventory">State : already buy</string>
</resources>