<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="@dimen/example_medium_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_icon_inventory"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/icon_chapeau_de_fermier"/>

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/item_default_name"
            android:layout_toRightOf="@id/item_icon_inventory"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/item_default_price"
            android:layout_below="@id/item_name"
            android:layout_toRightOf="@id/item_icon_inventory"/>

        <TextView
            android:id="@+id/item_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/item_default_state_inventory"
            android:layout_below="@id/item_price"
            android:layout_toRightOf="@id/item_icon_inventory"/>

    </RelativeLayout>

</RelativeLayout>
