<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_prairie">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_happiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_default_happiness"/>

        <TextView
            android:id="@+id/item_hungry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_default_hungry"/>

        <TextView
            android:id="@+id/item_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_default_money"/>

    </LinearLayout>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/icon_chevre" />

    <Button
        android:id="@+id/button_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_border_black"
        android:text="Play Game" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shop"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/button_border_black"/>

    <Button
        android:id="@+id/button_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inventory"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:background="@drawable/button_border_black"/>

</RelativeLayout>
